--- a/MM7.ipynb
+++ b/MM7.ipynb
@@ -21,6 +21,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Assumindo o Arctg(X):\n"
+      ],
+      "metadata": {
+        "id": "2Mf5E26vmPZG"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -176,7 +185,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP+O+QDuXj5tNfrhxMCcUb7",
+      "authorship_tag": "ABX9TyPMms8SJzEJwI+9VGMZtx73",
       "include_colab_link": true
     },
     "kernelspec": {
